<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <co.tara.tarabari.driver.myview.MyTextView
                        android:id="@+id/txt_finishedTrip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="10dp"
                        android:text="50"
                        android:textColor="@color/red" />

                    <co.tara.tarabari.driver.myview.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txt_finishedTrip"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:text="@string/finished_trip"
                        android:textSize="11sp" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <co.tara.tarabari.driver.myview.MyTextView
                        android:id="@+id/txt_myEarnTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="20dp"
                        android:text="9ساعت و30دقیقه"
                        android:textColor="@color/blue"
                        android:textSize="10sp" />

                    <co.tara.tarabari.driver.myview.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txt_myEarnTime"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:text="@string/expend_time"
                        android:textSize="12sp" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"

            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <co.tara.tarabari.driver.myview.MyTextView
                        android:id="@+id/txt_myEarn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="10dp"
                        android:text="53500"
                        android:textColor="@color/green"
                        android:textSize="20sp" />

                    <co.tara.tarabari.driver.myview.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/txt_myEarn"
                        android:layout_toLeftOf="@id/txt_myEarn"
                        android:text="@string/toman"
                        android:textColor="@color/green"
                        android:textSize="10sp" />

                    <co.tara.tarabari.driver.myview.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
android:gravity="center"
                        android:text="@string/my_earn"
                        android:layout_below="@+id/txt_myEarn"

                        android:layout_centerHorizontal="true" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <co.tara.tarabari.driver.myview.MyTextView
                android:id="@+id/myTextView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/today_trips" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <!--<include
                layout="@layout/adapter_today_trip"
                android:layout_width="match_parent"
                android:layout_height="100dp" />
-->
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rec_trip"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>